--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,13 @@
   "description" : "",
   "version": "0.001",
   "permissions": [
-    "activeTab"
+    "activeTab",
+    "storage"
   ],
+  "options_ui": {
+    "page": "options.html",
+    "open_in_tab": false
+  },
   "browser_action": {
     "default_popup": "default.html",
     "default_icon": "icon.png"
