--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Read It Later",
-  "description" : "",
-  "version": "0.001",
+  "description": "",
+  "version": "0.002",
   "permissions": [
     "activeTab",
     "storage"
@@ -10,9 +10,14 @@
     "page": "options.html",
     "open_in_tab": false
   },
+  "background": {
+    "scripts": [
+      "background.js"
+    ]
+  },
   "browser_action": {
     "default_popup": "default.html",
-    "default_icon": "icon.png"
+    "default_icon": "icon-light.png"
   },
   "manifest_version": 2
 }
